add some methods
